--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "rollup --config",
     "dev": "rollup --config --watch",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "npm run build",
+    "format": "prettier --write \"src/**/*.js?(x)\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "prettier": "^2.6.0",
     "rollup": "^1.29.0"
   },
   "repository": {
