--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/richtext-parser.esm.js",
   "browser": "dist/richtext-parser.umd.js",
   "scripts": {
-    "build": "rollup --config",
+    "build": "rollup --config --sourcemap",
     "dev": "rollup --config --watch",
     "test": "node test/test.js",
     "pretest": "npm run build",
@@ -15,8 +15,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-typescript": "^8.3.1",
     "prettier": "^2.6.0",
-    "rollup": "^1.29.0"
+    "rollup": "^1.29.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.6.2"
   },
   "repository": {
     "type": "git",
