--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "rollup --config --watch",
     "test": "node test/test.js",
     "pretest": "npm run build",
-    "format": "prettier --write \"src/**/*.js?(x)\""
+    "format": "prettier --write \"src/**/*.ts?(x)\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
