chore: add jest test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,13 @@
       "node"
     ],
   },
+  "ts-node": {
+    "transpileOnly": true,
+    "files": true,
+    "compilerOptions": {
+      "rootDir": "."
+    }
+  },
   "include": [
     "src/**/*",
   ],
