--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rollup --config --sourcemap",
     "dev": "rollup --config --watch",
-    "test": "node test/test.js",
+    "test": "jest",
     "pretest": "npm run build",
     "format": "prettier --write \"src/**/*.ts?(x)\""
   },
@@ -16,8 +16,12 @@
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@types/jest": "^27.4.1",
+    "jest": "^27.5.1",
     "prettier": "^2.6.0",
     "rollup": "^1.29.0",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
   },
