--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "module": "dist/richtext-parser.esm.js",
   "browser": "dist/richtext-parser.umd.js",
   "scripts": {
+    "serve": "serve -p 5100",
+    "open": "open http://localhost:5100/demo/demo.html",
     "build": "rollup --config --sourcemap",
     "dev": "rollup --config --watch",
     "test": "jest",
@@ -13,13 +15,18 @@
     "format": "prettier --write \"src/**/*.ts?(x)\""
   },
   "devDependencies": {
+    "@babel/types": "^7.17.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
-    "jest": "^27.5.1",
+    "@types/node": "^17.0.22",
+    "import-modules": "^3.1.0",
+    "jest": "^27.4.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.6.0",
-    "rollup": "^1.29.0",
+    "rollup": "^2.14.0",
+    "serve": "^13.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
