--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "rollup --config --watch",
     "test": "jest",
     "pretest": "npm run build",
-    "format": "prettier --write \"src/**/*.ts?(x)\""
+    "format": "prettier --write --parser typescript \"src/**/*.ts?(x)\""
   },
   "devDependencies": {
     "@babel/types": "^7.17.0",
@@ -23,6 +23,7 @@
     "@types/node": "^17.0.22",
     "import-modules": "^3.1.0",
     "jest": "^27.4.1",
+    "lint-staged": "^12.3.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.0",
     "rollup": "^2.14.0",
@@ -49,6 +50,18 @@
     "富文本",
     "游戏"
   ],
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --writer"
+    ],
+    "*.ts": [
+      "eslint",
+      "prettier --parser=typescript --writer"
+    ]
+  },
   "author": "Alson",
   "license": "ISC",
   "bugs": {
