chore: add changelog cli

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "rollup --config --watch",
     "test": "jest",
     "pretest": "npm run build",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "format": "prettier --write --parser typescript \"src/**/*.ts?(x)\""
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.22",
+    "conventional-changelog-cli": "^2.0.31",
     "import-modules": "^3.1.0",
     "jest": "^27.4.1",
     "lint-staged": "^12.3.7",
